<resources>
    <string name="app_name">FOT News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_explore">Explore</string>
    <string name="menu_info">User info.</string>
    <string name="menu_dev">Dev info.</string>
    <string name="menu_logout">Sign Out</string>
    <string name="menu_sports">Sports</string>
</resources>