<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_menu_search_icon"
            android:title="@string/menu_explore" />
        <item
            android:id="@+id/nav_userinfo"
            android:icon="@drawable/ic_menu_userinfo_icon"
            android:title="@string/menu_info" />
        <item
            android:id="@+id/nav_dev"
            android:icon="@drawable/ic_menu_dev_icon"
            android:title="@string/menu_dev" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout_icon"
            android:title="@string/menu_logout" />
    </group>
</menu>